--- a/PhotoWithCoreData/Info.plist
+++ b/PhotoWithCoreData/Info.plist
@@ -39,5 +39,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSCameraUsageDescription</key>
+    <string>치즈~</string>
 </dict>
 </plist>
